# kuafu

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
conf/: kuafu.yaml
docs/: design.md
src/kuafu/: __init__.py  cli.py  config.py  console.py  crawler.py  events.py  models.py
src/kuafu/dedup/: bloom.py
src/kuafu/fetcher/: base.py  encoding.py  httpx_client.py  retry.py
src/kuafu/frontier/: base.py  memory.py  url.py
src/kuafu/middleware/: middleware.py
src/kuafu/parser/: base.py  html.py  link.py
src/kuafu/pipeline/: pipeline.py
src/kuafu/politeness/: manager.py
src/kuafu/scheduler/: base.py  bfs.py
src/kuafu/search/: __init__.py  models.py  pipeline.py  transformer.py
src/kuafu/web/: __init__.py  app.py  crawl_manager.py  event_bus.py  routes.py
src/kuafu/web/static/: main.js  style.css
src/kuafu/web/templates/: base.html  detail.html  index.html
tests/integration/: test_e2e.py  test_search_e2e.py  test_web_routes.py
tests/unit/: test_config.py  test_crawler_events.py  test_dedup.py  test_encoding.py  test_events.py  test_frontier.py  test_middleware.py  test_parser.py  test_politeness.py  test_retry.py  test_search_pipeline.py  test_search_transformer.py  test_url_normalize.py  test_web_crawl_manager.py  test_web_event_bus.py
