[project]
name = "kuafu"
version = "0.1.0"
description = "轻量、易扩展的工业级网络爬虫引擎"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Wang Zhongyou"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx[http2]>=0.27",
    "lxml>=5.0",
    "parsel>=1.9",
    "yarl>=1.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "charset-normalizer>=3.0",
    "mmh3>=4.0",
    "prometheus-client>=0.20",
    "aiofiles>=23.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/wzhongyou/kuafu"
Repository = "https://github.com/wzhongyou/kuafu"
Documentation = "https://github.com/wzhongyou/kuafu/docs"
Issues = "https://github.com/wzhongyou/kuafu/issues"
Changelog = "https://github.com/wzhongyou/kuafu/blob/main/CHANGELOG.md"

[project.optional-dependencies]
render = ["playwright>=1.40"]
redis = ["redis[hiredis]>=5.0"]
kafka = ["aiokafka>=0.10"]
grpc = ["grpcio>=1.60", "grpcio-tools>=1.60"]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
kuafu = "kuafu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kuafu"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
